# RVV-SIMD

./: .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
benchmarks/: CMakeLists.txt
benchmarks/core/: matrix_ops_benchmark.cpp  vector_ops_benchmark.cpp
benchmarks/cross_arch/: cross_arch_benchmark.cpp
benchmarks/ml/: ml_ops_benchmark.cpp
docs/: README.md  architecture.md  benchmark_methodology.md  conf.py  faq.rst  index.rst  instalacao.rst  introducao.rst  requirements.txt  usage_guide.md  uso_cpp.rst  uso_python.rst
docs/_build/html/: .buildinfo  alternativas.html  arquitetura.html  benchmarks.html  contribuicoes.html  estrutura.html  faq.html  genindex.html  index.html  instalacao.html  introducao.html  ml_aplicacoes.html  objects.inv  otimizacoes.html  search.html  searchindex.js  suporte_python.html  uso_cpp.html  uso_python.html
docs/_build/html/.doctrees/: alternativas.doctree  arquitetura.doctree  benchmarks.doctree  contribuicoes.doctree  environment.pickle  estrutura.doctree  faq.doctree  index.doctree  instalacao.doctree  introducao.doctree  ml_aplicacoes.doctree  otimizacoes.doctree  suporte_python.doctree  uso_cpp.doctree  uso_python.doctree
docs/_build/html/_sources/: arquitetura.rst.txt
include/: rvv_simd.h
include/rvv_simd/: config.h  matrix_ops.h  ml_ops.h  vector_ops.h
python/: rvv_simd_bindings.cpp  setup.py
python/examples/: matrix_operations.py  ml_operations.py  vector_operations.py
python/rvv_simd/: __init__.py
src/core/: matrix_ops.cpp  rvv_simd.cpp  vector_ops.cpp
src/ml/: ml_ops.cpp
tests/: CMakeLists.txt  test_main.cpp  test_matrix_ops.cpp  test_ml_ops.cpp  test_vector_ops.cpp
